<?xml version="1.0" encoding="utf-8"?>
<eu.mobilebear.imagegallery.utils.PhotoCardView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:card_view="http://schemas.android.com/apk/res-auto"
  android:id="@+id/photoCardView"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_margin="@dimen/card_margin"
  card_view:cardCornerRadius="@dimen/card_corner_radius"
  card_view:cardElevation="@dimen/card_elevation">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
      android:id="@+id/photoImageView"
      android:layout_width="match_parent"
      android:layout_height="@dimen/image_size"
      android:adjustViewBounds="true"/>

    <TextView
      android:id="@+id/titleTextVIew"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_gravity="center"
      android:gravity="center"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:textColor="@color/photoItemText"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/default_margin"
      android:orientation="horizontal">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/date_taken"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorAccent"/>

      <TextView
        android:id="@+id/dataTakenTextVIew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/photoItemText"/>
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/default_margin"
      android:orientation="horizontal">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/date_published"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorAccent"/>

      <TextView
        android:id="@+id/publishedTextVIew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/photoItemText"/>

    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/default_margin"
      android:orientation="horizontal">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/author"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorAccent"/>

      <TextView
        android:id="@+id/authorTextVIew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/photoItemText"/>

    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_margin="@dimen/default_margin"
      android:orientation="horizontal"
      android:weightSum="2">

      <ImageView
        android:id="@+id/webImageView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:src="@drawable/web"/>

      <ImageView
        android:id="@+id/emailShareImageView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:src="@drawable/share"/>

    </LinearLayout>

  </LinearLayout>

</eu.mobilebear.imagegallery.utils.PhotoCardView>