<resources>
  <string name="app_name">ImageGallery</string>
  <string name="ok">OK</string>
  <string name="photo_permissions_not_granted">Permissions for saving Photo were not granted</string>
  <string name="photo_permissions_granted">Photo permissions were granted</string>
  <string name="tag_hint">Tag Filter</string>
  <string name="search">SEARCH</string>
  <string name="author">Author:</string>
  <string name="date_published">Date published:</string>
  <string name="date_taken">Date taken:</string>
  <string name="sort">Sort</string>
  <string name="publish_date">Publish Date</string>
  <string name="taken_date">Taken Date</string>
  <string name="progess_dialog_title">Please wait</string>
  <string name="progress_dialog_description">Downloading…</string>
  <string name="no_tag_error_message">We coudn\'t find photos by this tag. Sorry</string>
  <string name="generic_error_message">Something went wrong</string>
  <string name="sort_error_message">Cound\'t sort the list.</string>
  <string name="empty_tag_error_message">Tag is empty.</string>
</resources>
