<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mainLayout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_margin="@dimen/default_margin"
  android:orientation="vertical"
  tools:context="eu.mobilebear.imagegallery.fragments.PhotosFragment">

  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/tag_hint">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/tagEditTextView"
      android:layout_width="match_parent"
      android:layout_height="@dimen/default_height_widget"
      android:lines="1"
      android:scrollbars="vertical"
      android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
      android:textColor="@color/colorPrimaryDark"/>
  </android.support.design.widget.TextInputLayout>

  <Button
    android:id="@+id/searchButton"
    android:layout_width="match_parent"
    android:layout_height="@dimen/default_height_widget"
    android:layout_marginTop="@dimen/default_margin"
    android:background="@drawable/search_button_selector"
    android:text="@string/search"
    android:textColor="@color/colorAccent"/>

  <android.support.v7.widget.SwitchCompat
    android:id="@+id/sortSwitch"
    android:layout_width="200dp"
    android:layout_height="50dp"
    android:layout_gravity="center"
    android:checked="false"
    android:gravity="center"
    android:text="@string/sort"
    android:textOff="@string/publish_date"
    android:textOn="@string/taken_date"
    android:visibility="invisible"
    app:showText="true"/>


  <android.support.v7.widget.RecyclerView
    android:id="@+id/photosRecyclerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@android:color/transparent"
    android:scrollbars="vertical"
    tools:listitem="@layout/photo_item"/>

</LinearLayout>
